tests/paczka1/small_fuzzy/68838546.err
Error in line 4: XeZn A180 78,90
Error in line 2: XeZn A180 19,3
Error in line 11: ZUn6StOzK0 A404 35,3
